@@ -4,6 +4,9 @@ Changelog
 0.1 (unreleased)
 ----------------
 
+- Add page to default_page_types.
+  [robgietema]
+
 - Refactored dependencies so that plone.app.deco now contains all UI and
   plone.app.page contains all storage and logic related to Deco.
   plone.app.layoutbehavior and plone.formwidget.layoutbehavior are now
